--- a/index.html
+++ b/index.html
@@ -4,39 +4,49 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>project of cyber</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
 
-  <div class="container-fluid  text-center text-primary">
-    <img src="img/images (2).jfif" alt="">
-    <br><br><br>
-    <h1>Babul biscuits Company</h1>
-    <h1 class="text-underline">BBC</h1>
-    <br><br><br>
+
+  <div class="container-fluid">
     <div class="row">
-      <div class="col-12">
-        <input type="text"placeholder="Facebook/Gmail"style="width: 330px;height: 30px;">
+      <div class=" animate__animated animate__backInLeft col-6 text-warning text-center pt-3 ">
+<p><i class="  fa-solid fa-phone text-warning "> &nbsp;</i>+8801950024639</p>
+      </div>
+      <div class=" animate__animated animate__backInRight col-6 text-warning text-center  pt-3">
+        <p><i class="fa-solid fa-envelope text-warning ">&nbsp;</i> mtariqul945@gmail.com</p>
+      </div>
+    </div>
+  </div>
+<br><br>
+  <div class=" container-fluid  text-center  pic">
+    <br><br><br>
+    <h1 class=" animate__animated animate__backInDown  text-warning" >Wev Devlopments of Tariquls</h1>
+    <h1 class=" animate__animated animate__backInDown  text-underline text-warning ">link of cyber</h1>
+    <br><br><br>
+    <div class="row  ">
+      <div class=" animate__animated animate__backInLeft col-12  ">
+        <input type="text"placeholder="Facebook/Gmail"style="width: 350px;height: 30px;">
 
       </div>
       <br><br><br>
-      <div class="col-12">
+      <div class=" animate__animated animate__backInRight col-12  ">
 
-        <input type="number/text"placeholder="Password"style="width: 330px;height: 30px;">
+        <input type="number/text"placeholder="Password"style="width: 350px;height: 30px;">
     </div>
     <br><br><br>
     <div class="col-12">
-      <button class="btn btn-primary text center " >Submite</button>
+      <button class=" animate__animated animate__backInUp btn btn-warning " > <i class="fa-solid fa-download"></i> Submite</button>
     </div>
   </div>
 
-<div class="pic">
-
-</div>
-
+ 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
